--- a/Project Spareparts/Project Spareparts.CSharp.csproj
+++ b/Project Spareparts/Project Spareparts.CSharp.csproj
@@ -80,6 +80,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Attachpoint.cs" />
     <Compile Include="Assets\Scripts\ChainObject.cs" />
+    <Compile Include="Assets\Scripts\GameManager.cs" />
     <Compile Include="Assets\Scripts\MeshObject.cs" />
     <Compile Include="Assets\Scripts\ObjectManager.cs" />
     <Compile Include="Assets\Scripts\PlaceGhost.cs" />
